--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
     "name": "backend",
     "version": 2,
-    "builds": [{ "src": "index.js", "use": "@now/node-server" }],
+    "builds": [{ "src": "index.js", "use": "@now/node" }],
     "env": {
       "MONGODB_URI": "@my-mongodb-uri"
     },
